--- a/Style/style.css
+++ b/Style/style.css
@@ -547,7 +547,7 @@ font-weight: bolder;
 
 .video-section{
 height: 85vh;
-background-image: url(/images/yt-video-image.jpg);
+background-image: url(../images/yt-video-image.jpg);
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
@@ -705,6 +705,19 @@ font-size: 12px;
     color: #be1a0f;
     text-decoration: underline;
 }
+.footer-icons i{
+ background-color:  #f7f9fc !important;
+ padding: 8px;
+ border-radius: 5px;
+ 
+}
+.footer-section ul li .apple-pay{
+   border-radius: 4px;
+   border: 2px solid black;
+   padding: 2px;
 
-
+}
+.footer-section .sub-heading{
+    font-size: 15px;
+}
 /* footer-section-end */
